# molecular-docking-workflow

./: .gitignore  DockFlow.spec  README.md  dockflow.sh  pyproject.toml
.github/workflows/: tests.yml  windows-exe.yml
config/: config.example.yaml  targets.example.tsv
docs/: SCIENTIFIC_WORKFLOW.md
docs/superpowers/plans/: 2026-07-10-molecular-docking-workflow.md
docs/superpowers/specs/: 2026-07-10-molecular-docking-workflow-design.md
src/dockflow/: cache.py  cli.py  commands.py  config.py  desktop.py  diagnostics.py  drop_validation.py  gui.py  gui_advanced.py  gui_launcher.py  gui_ligands.py  gui_preview.py  gui_scientific.py  gui_v2.py  gui_viewers.py  gui_workbench.py  ligand_library.py  meeko_ligand_launcher.py  meeko_receptor_launcher.py  models.py  native_viewer.py  pipeline.py  pockets.py  portable.py  pose_analysis.py  poses.py  preflight.py  preparation.py  preparation_report.py  preprocess_status.py  professional_viewers.py  qc.py  receptor_plan.py  reporting.py  result_workbench.py  scientific_qc.py  state.py  structure_preview.py  structure_scene.py  structures.py  (+3 more)
tests/: test_cache.py  test_config.py  test_desktop.py  test_drag_drop_preview.py  test_ligand_library.py  test_ligand_preparation.py  test_pockets.py  test_poses.py  test_preflight.py  test_preparation_backend.py  test_professional_viewers.py  test_qc.py  test_qt_dialog_compatibility.py  test_reporting.py  test_result_workbench.py  test_scientific_qc.py  test_structure_preview.py  test_structure_scene.py  test_tooling.py  test_windows_launcher.py  test_wizard.py
