[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "dockflow"
version = "1.1.0"
description = "Reusable AutoDockTools and AutoDock Vina batch docking workflow"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
test = ["pytest>=8.0"]
gui = ["PySide6>=6.7"]

[project.scripts]
dockflow = "dockflow.cli:main"
dockflow-gui = "dockflow.gui_launcher:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
